Fix content overlapping footer on /people/* pages
Also, add executable permissions to gradlew

Known side-effects:
* "Centre was created..." on the home page now takes a little bit more
  vertical space

--- a/data/home/assets/sass/main.scss
+++ b/data/home/assets/sass/main.scss
@@ -32,6 +32,7 @@
 			margin: 0 auto;
 			max-width: _size(inner);
 			width: calc(100% - 6em);
+			overflow: auto;
 
 			@include breakpoint('<=small') {
 				@include padding(3em, 0);
